# -Autonomous-Academic-Paper-Generation-Pipeline

./: .coverage  .env-example  .gitignore  DEPENDENCIES.md  README.md  pyproject.toml  run_pipeline.py
config/: rate_limits.json  setup.json
data/processed/: final_paper.sha256  output.aux  output.bbl  output.bcf  output.blg  output.fdb_latexmk  output.fls  output.out  output.run.xml  output.toc  references.bib  web_sources.json
docs/: PLAN.md  PRD.md  PRD_rag_engine.md  TODO.md  token_economy_report.md
logs/: prompt_log.md
skills/: latex_skill.md  research_skill.md  review_skill.md  writing_skill.md
src/agents/: latex_agent.py  researcher.py  reviewer.py  writer.py
src/autonomous_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sdk/: asset_generator.py  belief_network.py  bib_generator.py  bib_sync.py  core.py  corpus_bib.py  gatekeeper.py  harness.py  hil_gate.py  ingest.py  latex_compiler.py  latex_converter.py  latex_style.py  md_latex.py  pipeline.py  post_generation.py  tex_sanity.py  token_economy.py  web_sources.py
src/shared/: version.py
src/tools/: rag_core.py  rag_parser.py  rag_query.py  web_search.py
tests/: conftest.py
tests/unit/: test_asset_generator.py  test_belief_network.py  test_bib_generator.py  test_bib_sync.py  test_core.py  test_gatekeeper.py  test_harness.py  test_hil_gate.py  test_ingest.py  test_latex_agent.py  test_latex_compiler.py  test_latex_converter.py  test_latex_style.py  test_md_latex.py  test_pipeline.py  test_post_generation.py  test_rag_core.py  test_rag_parser.py  test_rag_query.py  (+8 more)
(+7 files in other folders)
