[project]
name = "autonomous_pipeline"
version = "1.0.0"
description = "Autonomous AI Pipeline for Academic Paper Generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai",
    "google-genai",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff"
]

[tool.ruff]
line-length = 115
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
