[project]
name = "autonomous_pipeline"
version = "1.0.0"
description = "Autonomous AI Pipeline for Academic Paper Generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.1.1",
    "crewai",
    "google-genai",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pymupdf>=1.27.2.3",
    "python-bidi>=0.4",
    "python-dotenv",
    "ddgs>=9.14.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff"
]

[tool.ruff]
line-length = 115
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]
